--- a/docs/数据权限.md
+++ b/docs/数据权限.md
@@ -1,3 +1,5 @@
+默认情况下，没有任何限制。所以`acl`中的权限设置是为了限制指定的用户不能做什么，而不是授权做什么。
+
 # 仅管理员可见
 
 数据库和集合支持设置为仅管理员可见。
@@ -27,9 +29,9 @@
 
 | 对象   | 权限    | 说明                                               |
 | ------ | ------- | -------------------------------------------------- |
-| 数据库 | read    | 只可以读数据库信息，不允许修改。默认允许修改。     |
+| 数据库 | readDb  | 只可以读数据库信息，不允许修改。默认允许修改。     |
 | 数据库 | readCl  | 可以读数据库中的文档，不可以添加、删除和修改集合。 |
-| 集合   | read    | 只可以读集合信息，不允许修改。默认允许修改。       |
+| 集合   | readCl  | 只可以读集合信息，不允许修改。默认允许修改。       |
 | 集合   | readDoc | 可以读集合中的文档，不可以添加、删除和修改文档。   |
 
 ## api
