优化集合导入数据插件

--- a/docs/元数据.md
+++ b/docs/元数据.md
@@ -126,3 +126,213 @@
 | scope       | 适用对象类型：文档（document），数据库（db）或集合（collection） | 是   |
 | description |                                                                  | 否   |
 | body        | `json-schema`数据                                                | 否   |
+
+# 示例 schema
+
+```json
+{
+  "type": "object",
+  "title": "示例定义01",
+  "properties": {
+    "valid": {
+      "type": "boolean",
+      "title": "合规？"
+    },
+    "gender": {
+      "type": "string",
+      "title": "性别",
+      "oneOf": [
+        {
+          "label": "男",
+          "value": "男"
+        },
+        {
+          "label": "女",
+          "value": "女"
+        }
+      ],
+      "enumGroups": []
+    },
+    "city": {
+      "type": "string",
+      "title": "城市",
+      "enum": [
+        {
+          "label": "北京",
+          "value": "北京"
+        },
+        {
+          "label": "上海",
+          "value": "上海"
+        },
+        {
+          "label": "广州",
+          "value": "广州"
+        },
+        {
+          "label": "深圳",
+          "value": "深圳"
+        }
+      ],
+      "enumGroups": []
+    },
+    "color": {
+      "type": "array",
+      "title": "颜色",
+      "anyOf": [
+        {
+          "label": "红色",
+          "value": "red"
+        },
+        {
+          "label": "绿色",
+          "value": "green"
+        },
+        {
+          "label": "蓝色",
+          "value": "blue"
+        }
+      ],
+      "enumGroups": [],
+      "items": {
+        "type": "string"
+      }
+    },
+    "activities": {
+      "type": "string",
+      "title": "活动",
+      "enum": [
+        {
+          "label": "购物",
+          "value": "a",
+          "group": "g1"
+        },
+        {
+          "label": "美容",
+          "value": "b",
+          "group": "g1"
+        },
+        {
+          "label": "游戏",
+          "value": "c",
+          "group": "g2"
+        },
+        {
+          "label": "打牌",
+          "value": "d",
+          "group": "g2"
+        }
+      ],
+      "enumGroups": [
+        {
+          "id": "g1",
+          "label": "分组1",
+          "assocEnum": {
+            "property": "gender",
+            "value": "女"
+          }
+        },
+        {
+          "id": "g2",
+          "label": "分组2",
+          "assocEnum": {
+            "property": "gender",
+            "value": "男"
+          }
+        }
+      ]
+    },
+    "district": {
+      "type": "string",
+      "title": "区",
+      "enumGroups": [
+        {
+          "id": "g1",
+          "label": "北京",
+          "assocEnum": {
+            "property": "city",
+            "value": "北京"
+          }
+        },
+        {
+          "id": "g2",
+          "label": "上海",
+          "assocEnum": {
+            "property": "city",
+            "value": "上海"
+          }
+        }
+      ],
+      "oneOf": [
+        {
+          "label": "西城区",
+          "value": "a",
+          "group": "g1"
+        },
+        {
+          "label": "东城区",
+          "value": "b",
+          "group": "g1"
+        },
+        {
+          "label": "静安区",
+          "value": "c",
+          "group": "g2"
+        },
+        {
+          "label": "浦东",
+          "value": "d",
+          "group": "g2"
+        }
+      ]
+    },
+    "district2": {
+      "type": "array",
+      "title": "区2",
+      "enum": [
+        {
+          "label": "西城区",
+          "value": "a",
+          "group": "g1"
+        },
+        {
+          "label": "东城区",
+          "value": "b",
+          "group": "g1"
+        },
+        {
+          "label": "海淀区",
+          "value": "c",
+          "group": "g1"
+        },
+        {
+          "label": "黄浦区",
+          "value": "e",
+          "group": "g2"
+        }
+      ],
+      "enumGroups": [
+        {
+          "id": "g1",
+          "label": "北京",
+          "assocEnum": {
+            "property": "city",
+            "value": "北京"
+          }
+        },
+        {
+          "id": "g2",
+          "label": "上海",
+          "assocEnum": {
+            "property": "city",
+            "value": "上海"
+          }
+        }
+      ],
+      "items": {
+        "type": "string"
+      }
+    }
+  }
+}
+```
